# cisco-voip-device-reset

./: .gitignore  README.md  app_mac.spec  app_mac_m1.spec  app_mac_x86.spec  app_windows.spec  app_windows_x64.spec  build.py  gui.py  gui.spec  main.py  pyproject.toml  reset_lg.py
ciscoreset/: __clear_keychain.py  __init__.py  axl.py  configs.py  credentials.py  exceptions.py  gui.py  gui_bgtasks.py  gui_homepage.py  gui_popups.py  keys.py  phone.py  sendmsg.py  utils.py  vision.py  xml.py
ciscoreset/layouts/: __init__.py  ip_status.py  main_window.py  phone_nav.py  resets.py  screenshot.py
ciscoxml/: sendmsg.py
tests/: test_ciscoxml.py
