[tool.poetry]
name = "ciscoxml"
version = "0.1.0"
description = ""
authors = ["arf <goobysc@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
stdiomask = "^0.0.6"
lxml = "^4.6.3"
pytesseract = "^0.3.8"
opencv-python = "^4.5.2"
ciscoaxl = "^0.159"
cryptography = "^3.4.7"
bs4 = "^0.0.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
ipykernel = "^6.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
