[tool.poetry]
name = "ciscoreset"
version = "0.2.0"
description = ""
authors = ["arf <goobysc@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
stdiomask = "^0.0.6"
lxml = "^4.6.3"
pytesseract = "^0.3.8"
cryptography = "^3.4.7"
bs4 = "^0.0.1"
tqdm = "^4.62.2"
opencv-python-headless = "^4.5.3"
PySimpleGUI = "^4.47.0"
Pillow = "^8.3.2"
validators = "^0.18.2"
tldextract = "^3.1.2"
keyring = "^23.2.1"
toml = "^0.10.2"
cucmtoolkit = {git = "https://github.com/rlad78/cucmtoolkit", rev = "master"}

[tool.poetry.dev-dependencies]
pytest = "^5.2"
ipykernel = "^6.0.1"
black = {version = "^21.8b0", allow-prereleases = true}
jupyter = "^1.0.0"
pyinstaller = "^4.5.1"

[tool.poetry.scripts]
gui = "ciscoreset.gui:run"
clear_keychain = "ciscoreset.__clear_keychain:clear_keychain"
build = "build:auto"
build_mac_m1 = "build:mac_m1"
build_mac = "build:mac"
build_windows = "build:windows"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
